[package]
name = "typst-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
comemo = "0.5.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
typst = { path = "../typst/crates/typst" }
typst-layout = { path = "../typst/crates/typst-layout" }
typst-library = { path = "../typst/crates/typst-library" }
typst-svg = { path = "../typst/crates/typst-svg" }
typst-utils = { path = "../typst/crates/typst-utils" }
typst-assets = "0.14"
wasm-bindgen = "0.2"
rayon = "1"
wasm-bindgen-rayon = "1.3"